dist_man1_MANS=

if BUILD_BITRUBD
  dist_man1_MANS+=bitrubd.1
endif

if ENABLE_QT
  dist_man1_MANS+=bitrub-qt.1
endif

if BUILD_BITRUB_CLI
  dist_man1_MANS+=bitrub-cli.1
endif

if BUILD_BITRUB_TX
  dist_man1_MANS+=bitrub-tx.1
endif

if ENABLE_WALLET
if BUILD_BITRUB_WALLET
  dist_man1_MANS+=bitrub-wallet.1
endif
endif
